# kernel_linux_patches

./: .gitattributes  BUILD.gn  README.md  README_zh.md  build.sh  build_kernel.sh  bundle.json  kernel.mk  kernel_module_build.sh  ohos.build
linux-4.19/hi3516dv300_patch/: hdf.patch
linux-4.19/hi3516dv300_small_patch/: dfx.patch  hdf.patch
linux-4.19/prebuilts/: linux_header_install.sh  thirdparty_headers.sh  update_headers.py
linux-4.19/prebuilts/usr/include/asm/: ..install.cmd
linux-4.19/prebuilts/usr/include/asm-generic/: Kbuild.asm
linux-4.19/prebuilts/usr/include/linux/: compiler_types.h
linux-5.10/common_patch/: hdf.patch
linux-5.10/dayu800_patch/: hdf.patch  thead_arch_riscv.patch
linux-5.10/hi3516dv300_patch/: hdf.patch  hi3516dv300.patch
linux-5.10/hi3751v350_patch/: hi3751v350.patch
linux-5.10/hispark_phoenix_patch/: hispark_phoenix.patch
linux-5.10/hispark_taurus_patch/: hispark_taurus.patch
linux-5.10/imx8mm_patch/: hdf.patch
linux-5.10/imx8mm_patch/patches/drivers/: 0015_linux_drivers_clk.patch  0030_linux_drivers_pci_misc_nvmem_of_mtd_mmc.patch  0034_linux_drivers_usb_vfio_wdt_tty_uio.patch
linux-5.10/khdvk_3566b_patch/: hdf.patch
linux-5.10/ls3a5000_patch/: hdf.patch
linux-5.10/prebuilts/: linux_header_install.sh  thirdparty_headers.sh  update_headers.py
linux-5.10/prebuilts/usr/include/asm-generic/: ipcbuf.h  (+11 more)
linux-5.10/qemu-arm-linux_patch/: hdf.patch
linux-5.10/rk3399_patch/: arch.patch  drivers.patch  hdf.patch  include.patch  kernel.patch  net.patch  others.patch  scripts.patch  sound.patch
linux-5.10/rk3568_patch/: hdf.patch
linux-5.10/t507_patch/: hdf.patch
linux-5.10/unionpi_tiger_pacth/: hdf.patch  linux-5.10.patch
linux-5.10/yangfan_patch/: Documentation.patch  arch.patch  drivers.patch  hdf.patch  include.patch  kernel.patch  net.patch  others.patch  sound.patch
linux-6.6/qemu-arm-linux_patch/: README.md  oh_headers.patch  qemu-arm-linux.patch  watchdog.patch
linux-6.6/rk3568_plus_patch/: hdf.patch
linux-6.6/rk3588_patch/: kernel.patch
(+364 files in other folders)
